Link task service to auth
