# Auth/openapi.yaml
@@ -78,6 +78,165 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
       security:
         - OAuth2PasswordBearer: []
+  /auth/create/:
+    post:
+      tags:
+        - tasks
+      summary: Create Task
+      operationId: create_task_auth_create__post
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TaskSchema'
+        required: true
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskIdSchema'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+      security:
+        - OAuth2PasswordBearer: []
+  /auth/update/{task_id}:
+    put:
+      tags:
+        - tasks
+      summary: Update Task
+      operationId: update_task_auth_update__task_id__put
+      security:
+        - OAuth2PasswordBearer: []
+      parameters:
+        - name: task_id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+            title: Task Id
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TaskSchema'
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FullTaskSchema'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /auth/delete/{task_id}:
+    delete:
+      tags:
+        - tasks
+      summary: Delete Task
+      operationId: delete_task_auth_delete__task_id__delete
+      security:
+        - OAuth2PasswordBearer: []
+      parameters:
+        - name: task_id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+            title: Task Id
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeleteTaskResponse'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /auth/get/{task_id}:
+    get:
+      tags:
+        - tasks
+      summary: Get Task By Id
+      operationId: get_task_by_id_auth_get__task_id__get
+      security:
+        - OAuth2PasswordBearer: []
+      parameters:
+        - name: task_id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+            title: Task Id
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FullTaskSchema'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /auth/get_all/:
+    get:
+      tags:
+        - tasks
+      summary: Get Tasks
+      operationId: get_tasks_auth_get_all__get
+      security:
+        - OAuth2PasswordBearer: []
+      parameters:
+        - name: page_number
+          in: query
+          required: true
+          schema:
+            type: integer
+            exclusiveMinimum: 0
+            title: Page Number
+        - name: page_size
+          in: query
+          required: true
+          schema:
+            type: integer
+            exclusiveMinimum: 0
+            title: Page Size
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FullTaskSchema'
+                title: Response Get Tasks Auth Get All  Get
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
 components:
   schemas:
     Body_authenticate_auth__post:
@@ -113,6 +272,34 @@ components:
         - username
         - password
       title: Body_authenticate_auth__post
+    DeleteTaskResponse:
+      properties:
+        success:
+          type: boolean
+          title: Success
+      type: object
+      required:
+        - success
+      title: DeleteTaskResponse
+    FullTaskSchema:
+      properties:
+        task_id:
+          anyOf:
+            - type: string
+            - type: 'null'
+          title: Task Id
+        title:
+          type: string
+          title: Title
+        text:
+          type: string
+          title: Text
+      type: object
+      required:
+        - task_id
+        - title
+        - text
+      title: FullTaskSchema
     HTTPValidationError:
       properties:
         detail:
@@ -122,6 +309,30 @@ components:
           title: Detail
       type: object
       title: HTTPValidationError
+    TaskIdSchema:
+      properties:
+        task_id:
+          anyOf:
+            - type: string
+            - type: 'null'
+          title: Task Id
+      type: object
+      required:
+        - task_id
+      title: TaskIdSchema
+    TaskSchema:
+      properties:
+        title:
+          type: string
+          title: Title
+        text:
+          type: string
+          title: Text
+      type: object
+      required:
+        - title
+        - text
+      title: TaskSchema
     Token:
       properties:
         access_token:
